CPPFLAGS= @NPM_CPPFLAGS@
CFLAGS=   @NPM_CFLAGS@
CXXFLAGS= @NPM_CXXFLAGS@
LDFLAGS=  @NPM_LDFLAGS@

noinst_LTLIBRARIES=   libcommon.la
libcommon_la_SOURCES= WorldCamera.cpp Globals.cpp CheatSheet.cpp \
                      GoalInstanceDrawing.cpp OdometryDrawing.cpp \
                      BBox.cpp WorldDrawing.cpp Manageable.cpp Sharp.cpp \
                      TrajectoryDrawing.cpp HoloDriveDrawing.cpp Object.cpp \
                      wrap_glu.cpp ScannerDrawing.cpp RobotZoomCamera.cpp \
                      RobotDrawing.cpp View.cpp StillCamera.cpp \
                      SimpleImage.cpp Sensor.cpp DiffDriveDrawing.cpp \
                      SharpDrawing.cpp Camera.cpp Drawing.cpp \
                      RobotServer.cpp RobotClient.cpp RobotDescriptor.cpp \
                      Lidar.cpp Manager.cpp World.cpp HAL.cpp Drive.cpp \
                      DiffDrive.cpp HoloDrive.cpp BicycleDrive.cpp \
                      TraversabilityDrawing.cpp BicycleDriveDrawing.cpp \
                      MapperUpdateDrawing.cpp MapperRefDrawing.cpp \
                      NoiseModel.cpp

include_HEADERS=      BBox.hpp BicycleDrive.hpp BicycleDriveDrawing.hpp \
                      Camera.hpp CheatSheet.hpp DiffDrive.hpp \
                      DiffDriveDrawing.hpp Drawer.hpp Drawing.hpp \
                      Drive.hpp Globals.hpp GoalInstanceDrawing.hpp \
                      HAL.hpp HoloDrive.hpp HoloDriveDrawing.hpp \
                      Lidar.hpp Manageable.hpp Manager.hpp \
                      MapperRefDrawing.hpp MapperUpdateDrawing.hpp \
                      NoiseModel.hpp Object.hpp OdometryDrawing.hpp \
                      RobotClient.hpp RobotDescriptor.hpp \
                      RobotDrawing.hpp RobotServer.hpp \
                      RobotZoomCamera.hpp ScannerDrawing.hpp \
                      Sensor.hpp Sharp.hpp SharpDrawing.hpp \
                      SimpleImage.hpp StillCamera.hpp \
                      TrajectoryDrawing.hpp TraversabilityDrawing.hpp \
                      View.hpp World.hpp WorldCamera.hpp \
                      WorldDrawing.hpp pdebug.hpp wrap_gl.hpp \
                      wrap_glu.hpp wrap_glut.hpp

includedir=           @includedir@/npm/common
