AM_CPPFLAGS= -I@abs_top_srcdir@ @NPM_CPPFLAGS@
AM_CFLAGS=   @NPM_CFLAGS@
AM_CXXFLAGS= @NPM_CXXFLAGS@
AM_LDFLAGS=  @NPM_LDFLAGS@

noinst_LTLIBRARIES=   libnpm.la
libnpm_la_SOURCES=    BBox.cpp \
                      BicycleDrive.cpp \
                      CheatSheet.cpp \
                      DiffDrive.cpp \
                      Drive.cpp \
                      HAL.cpp \
                      HoloDrive.cpp \
                      Lidar.cpp \
                      Manageable.cpp \
                      Manager.cpp \
                      NoiseModel.cpp \
                      Object.cpp \
                      RobotClient.cpp \
                      RobotDescriptor.cpp \
                      RobotServer.cpp \
                      Sensor.cpp \
                      Sharp.cpp \
                      World.cpp

include_HEADERS=      BBox.hpp \
                      BicycleDrive.hpp \
                      CheatSheet.hpp \
                      DiffDrive.hpp \
                      Drive.hpp \
                      HAL.hpp \
                      HoloDrive.hpp \
                      Lidar.hpp \
                      Manageable.hpp \
                      Manager.hpp \
                      NoiseModel.hpp \
                      Object.hpp \
                      RobotClient.hpp \
                      RobotDescriptor.hpp \
                      RobotServer.hpp \
                      Sensor.hpp \
                      Sharp.hpp \
                      World.hpp \
                      pdebug.hpp

includedir=           @includedir@/npm
