noinst_LTLIBRARIES=   librobox.la
librobox_la_SOURCES= DODrawing.cpp BBDrawing.cpp BLDrawing.cpp OCamera.cpp \
                    GridLayerCamera.cpp DWDrawing.cpp ODrawing.cpp \
                    RHDrawing.cpp GridLayerDrawing.cpp MPDrawing.cpp \
                    expoparams.cpp Robox.cpp

CPPFLAGS+=           -I@abs_top_builddir@/include
